# minicode-sdk

./: LICENSE  README.md  README_CN.md  TODO  pyproject.toml
.minicode/skills/minicode-contributing/: SKILL.md
.minicode/skills/minicode-usage/: SKILL.md
examples/: askuserquestion_example.py  background_process_example.py  basic_agent.py  claude_code_in_20_lines.py  comprehensive_demo.py  custom_llm.py  custom_tool.py  mcp_example.py  mini_claude_code.py  notebook_edit_example.py  openrouter_provider_examples.py  retry_decorator_example.py  rich_cli_example.py  skill_example.py  think_example.py  todowrite_example.py  web_tools_example.py
src/minicode/: __init__.py  agent.py  agent_registry.py  config.py
src/minicode/llm/: __init__.py  base.py  openai.py  openrouter.py  openrouter_text.py
src/minicode/mcp/: __init__.py  client.py  transport.py
src/minicode/session/: __init__.py  manager.py  message.py  prompt.py  session.py
src/minicode/skills/: __init__.py  loader.py
src/minicode/tools/: __init__.py  base.py  registry.py
src/minicode/tools/builtin/: __init__.py  askuserquestion.py  bash.py  bashoutput.py  edit.py  glob.py  grep.py  killshell.py  notebook.py  process_manager.py  read.py  skill.py  task.py  taskoutput.py  think.py  todowrite.py  webfetch.py  websearch.py  write.py
src/minicode/utils/: __init__.py  retry_decorator.py
tests/: README.md  test_agent.py  test_askuserquestion_tool.py  test_background_process.py  test_builtin_tools.py  test_config.py  test_mcp.py  test_message.py  test_message_conversion.py  test_notebook_tool.py  test_openrouter.py  test_openrouter_llm.py  test_read_tool.py  test_retry_decorator.py  test_skill_tool.py  test_skills.py  test_task_and_session.py  test_think_tool.py  test_todowrite_tool.py  test_tools.py  test_web_tools.py  test_web_tools_integration.py
tests/fixtures/: test_notebook.ipynb
